<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Absensi Digital</string>

    //menu
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    //TextView
    <string name="textview_imei">Imei</string>
    <string name="textview_nohandphone">No Handphone</string>
    <string name="textview_lantitude">Latitude</string>
    <string name="textview_longitude">Longitude</string>


    //edittext
    <string name="edittext_nip">NIP</string>
    <string name="edittext_nama">Name</string>
    <string name="edittext_alamat">Adress</string>
    <string name="edittext_gender">Gender</string>
    <string name="edittext_nohp">No Handphone</string>
    <string name="edittext_imei">Imei</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_email_login">Email or Name</string>

    //radiobutton
    <string name="radiobutton_male"> Male</string>
    <string name="radiobutton_female"> Female</string>


    // Button
    <string name="button_in">IN</string>
    <string name="button_out">OUT</string>
    <string name="button_save">SAVE</string>
    <string name="button_signin">Sign in</string>
    <string name="button_signup">Do not have Account\n Sign Up here!</string>
    <string name="button_signup_land">Do not  have Account SIGN UP here!</string>

    //Proggress dialog
    <string name="progress_dialog_hint">Loading...</string>
    <string name="progress_dialog_sever_hint">Loading data from server...</string>

    //error message
    <string name="error_message_NIP">Please Insert Your NIP</string>
    <string name="error_message_name">Please Insert Your Name</string>
    <string name="error_message_addres">Please Insert Your addres</string>
    <string name="error_message_network">Sorry Something error in Netwok</string>
    <string name="error_message_email">Please Insert Your Email</string>
    <string name="error_network">Network Failed</string>

    //hint activity
    <string name="hint_succes_registred">Success Registered</string>
    <string name="hint_failed_registred">Failed Registered</string>
    <string name="hint_nip">Sorry NIP you input already registered!</string>
    <string name="hint_nohp_registred">Sorry No hp you input already registered!</string>
    <string name="hint_imei_registred">Sorry Imei you input already registered!</string>
    <string name="hint_nip_registred">Sorry NIP you input already registered!</string>
    <string name="hint_succes_absent">Succes Absent</string>
    <string name="hint_succes_absent_out">Succes Absent Out</string>
    <string name="hint_failed_absent">Failed Absent</string>
    <string name="hint_succes_login">Sign IN Succes</string>
    <string name="hint_failed_login">Failed Sign In</string>
    <string name="hint_succes_validasi">Validation Succes</string>
    <string name="hint_failed_validasi">Validation Failed</string>
    <string name="hint_error_gps">Something error in gps!</string>
    <string name="hint_location_user">You in Position to Absent</string>
    <string name="hint_location_user_out">You out from Position to Absent</string>
    <string name="hint_time_work">Time Work:</string>

    //spinner list
    <string-array name="Position">
        <item>headmaster</item>
        <item>vice principal</item>
        <item>the head of the library</item>
        <item>Teacher</item>
        <item>Administration</item>
        <item>Adminsitration Staff</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->

    <!--<string name="action_settings">Settings</string>-->

    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--<string name="title_activity_main2">Main2Activity</string>-->

    <string name="about_hal">This digital application is used for employee absent</string>
    <string name="help_text">
        1. To Conduct Attendance make sure you have registered if you have not registered can do registration goto administration \n
        2. make sure no phone and imei in accordance with the registered \n
        3. When validation matches then there will be name and title in view \n
        4. Press the entry and exit attendance keys to attend</string>
</resources>
